Learn Biavariate Analysis

--- a/Machine_Learning_Concept/Data_Analysis_using_Pandas/ILP_DATASETS_Univariate_analysis.ipynb
+++ b/Machine_Learning_Concept/Data_Analysis_using_Pandas/ILP_DATASETS_Univariate_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "a40c83b4",
    "metadata": {},
    "outputs": [],
@@ -109,6 +109,207 @@
    "outputs": [
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "match_id",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "inning",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "batting_team",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "bowling_team",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "over",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "ball",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "batter",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "bowler",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "non_striker",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "batsman_runs",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "extra_runs",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "total_runs",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "extras_type",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "is_wicket",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "player_dismissed",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "dismissal_kind",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "fielder",
+         "rawType": "object",
+         "type": "unknown"
+        }
+       ],
+       "ref": "85524de4-808a-4b9f-9f16-404815fcc9c7",
+       "rows": [
+        [
+         "0",
+         "335982",
+         "1",
+         "Kolkata Knight Riders",
+         "Royal Challengers Bangalore",
+         "0",
+         "1",
+         "SC Ganguly",
+         "P Kumar",
+         "BB McCullum",
+         "0",
+         "1",
+         "1",
+         "legbyes",
+         "0",
+         null,
+         null,
+         null
+        ],
+        [
+         "1",
+         "335982",
+         "1",
+         "Kolkata Knight Riders",
+         "Royal Challengers Bangalore",
+         "0",
+         "2",
+         "BB McCullum",
+         "P Kumar",
+         "SC Ganguly",
+         "0",
+         "0",
+         "0",
+         null,
+         "0",
+         null,
+         null,
+         null
+        ],
+        [
+         "2",
+         "335982",
+         "1",
+         "Kolkata Knight Riders",
+         "Royal Challengers Bangalore",
+         "0",
+         "3",
+         "BB McCullum",
+         "P Kumar",
+         "SC Ganguly",
+         "0",
+         "1",
+         "1",
+         "wides",
+         "0",
+         null,
+         null,
+         null
+        ],
+        [
+         "3",
+         "335982",
+         "1",
+         "Kolkata Knight Riders",
+         "Royal Challengers Bangalore",
+         "0",
+         "4",
+         "BB McCullum",
+         "P Kumar",
+         "SC Ganguly",
+         "0",
+         "0",
+         "0",
+         null,
+         "0",
+         null,
+         null,
+         null
+        ],
+        [
+         "4",
+         "335982",
+         "1",
+         "Kolkata Knight Riders",
+         "Royal Challengers Bangalore",
+         "0",
+         "5",
+         "BB McCullum",
+         "P Kumar",
+         "SC Ganguly",
+         "0",
+         "0",
+         "0",
+         null,
+         "0",
+         null,
+         null,
+         null
+        ]
+       ],
+       "shape": {
+        "columns": 17,
+        "rows": 5
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -292,6 +493,237 @@
    "outputs": [
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "id",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "season",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "city",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "date",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "match_type",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "player_of_match",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "venue",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "team1",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "team2",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "toss_winner",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "toss_decision",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "winner",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "result",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "result_margin",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "target_runs",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "target_overs",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "super_over",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "method",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "umpire1",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "umpire2",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "ref": "f12476a3-0b7f-4da4-a841-c860c3dbc187",
+       "rows": [
+        [
+         "0",
+         "335982",
+         "2007/08",
+         "Bangalore",
+         "2008-04-18",
+         "League",
+         "BB McCullum",
+         "M Chinnaswamy Stadium",
+         "Royal Challengers Bangalore",
+         "Kolkata Knight Riders",
+         "Royal Challengers Bangalore",
+         "field",
+         "Kolkata Knight Riders",
+         "runs",
+         "140.0",
+         "223.0",
+         "20.0",
+         "N",
+         null,
+         "Asad Rauf",
+         "RE Koertzen"
+        ],
+        [
+         "1",
+         "335983",
+         "2007/08",
+         "Chandigarh",
+         "2008-04-19",
+         "League",
+         "MEK Hussey",
+         "Punjab Cricket Association Stadium, Mohali",
+         "Kings XI Punjab",
+         "Chennai Super Kings",
+         "Chennai Super Kings",
+         "bat",
+         "Chennai Super Kings",
+         "runs",
+         "33.0",
+         "241.0",
+         "20.0",
+         "N",
+         null,
+         "MR Benson",
+         "SL Shastri"
+        ],
+        [
+         "2",
+         "335984",
+         "2007/08",
+         "Delhi",
+         "2008-04-19",
+         "League",
+         "MF Maharoof",
+         "Feroz Shah Kotla",
+         "Delhi Daredevils",
+         "Rajasthan Royals",
+         "Rajasthan Royals",
+         "bat",
+         "Delhi Daredevils",
+         "wickets",
+         "9.0",
+         "130.0",
+         "20.0",
+         "N",
+         null,
+         "Aleem Dar",
+         "GA Pratapkumar"
+        ],
+        [
+         "3",
+         "335985",
+         "2007/08",
+         "Mumbai",
+         "2008-04-20",
+         "League",
+         "MV Boucher",
+         "Wankhede Stadium",
+         "Mumbai Indians",
+         "Royal Challengers Bangalore",
+         "Mumbai Indians",
+         "bat",
+         "Royal Challengers Bangalore",
+         "wickets",
+         "5.0",
+         "166.0",
+         "20.0",
+         "N",
+         null,
+         "SJ Davis",
+         "DJ Harper"
+        ],
+        [
+         "4",
+         "335986",
+         "2007/08",
+         "Kolkata",
+         "2008-04-20",
+         "League",
+         "DJ Hussey",
+         "Eden Gardens",
+         "Kolkata Knight Riders",
+         "Deccan Chargers",
+         "Deccan Chargers",
+         "bat",
+         "Kolkata Knight Riders",
+         "wickets",
+         "5.0",
+         "111.0",
+         "20.0",
+         "N",
+         null,
+         "BF Bowden",
+         "K Hariharan"
+        ]
+       ],
+       "shape": {
+        "columns": 20,
+        "rows": 5
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -662,7 +1094,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".machinelearning",
+   "display_name": ".machinelearning (3.13.5)",
    "language": "python",
    "name": "python3"
   },
