--- a/Machine_Learning_Concept/Data_Analysis_using_Pandas/Pandas_profiling.ipynb
+++ b/Machine_Learning_Concept/Data_Analysis_using_Pandas/Pandas_profiling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
          "type": "string"
         }
        ],
-       "ref": "040e7d60-1481-4ad5-8da4-ba34fe9edd08",
+       "ref": "e96e6ea1-dfbb-47d8-845d-7f79d52298ee",
        "rows": [
         [
          "0",
@@ -306,7 +306,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,56 +315,11 @@
     "df = pd.read_csv('Train.csv')\n",
     "df.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR: Ignored the following versions that require a different python version: 4.0.0 Requires-Python >=3.7, <3.11; 4.1.0 Requires-Python >=3.7, <3.12; 4.1.1 Requires-Python >=3.7, <3.12; 4.1.2 Requires-Python >=3.7, <3.12; 4.10.0 Requires-Python <3.13,>=3.7; 4.11.0 Requires-Python <3.13,>=3.7; 4.12.0 Requires-Python <3.13,>=3.7; 4.12.1 Requires-Python <3.13,>=3.7; 4.12.2 Requires-Python <3.13,>=3.7; 4.13.0 Requires-Python <3.13,>=3.7; 4.14.0 Requires-Python <3.13,>=3.7; 4.15.0 Requires-Python <3.13,>=3.7; 4.15.1 Requires-Python <3.13,>=3.7; 4.16.0 Requires-Python <3.13,>=3.7; 4.16.1 Requires-Python <3.13,>=3.7; 4.2.0 Requires-Python >=3.7, <3.12; 4.3.0 Requires-Python >=3.7, <3.12; 4.3.1 Requires-Python >=3.7, <3.12; 4.3.2 Requires-Python >=3.7, <3.12; 4.4.0 Requires-Python >=3.7, <3.12; 4.5.0 Requires-Python >=3.7, <3.12; 4.5.1 Requires-Python >=3.7, <3.12; 4.6.0 Requires-Python >=3.7, <3.12; 4.6.1 Requires-Python >=3.7, <3.12; 4.6.2 Requires-Python >=3.7, <3.12; 4.6.3 Requires-Python >=3.7, <3.12; 4.6.4 Requires-Python >=3.7, <3.12; 4.6.5 Requires-Python >=3.7, <3.12; 4.7.0 Requires-Python >=3.7, <3.13; 4.8.3 Requires-Python <3.13,>=3.7; 4.9.0 Requires-Python <3.13,>=3.7\n",
-      "ERROR: Could not find a version that satisfies the requirement ydata-profiling (from versions: none)\n",
-      "ERROR: No matching distribution found for ydata-profiling\n"
-     ]
-    }
-   ],
-   "source": [
-    "import sys\n",
-    "!{sys.executable} -m pip install ydata-profiling\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'ydata_profiling'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Assuming 'df' is your DataFrame\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mydata_profiling\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m ProfileReport\n\u001b[32m      4\u001b[39m profile = ProfileReport(df, title=\u001b[33m\"\u001b[39m\u001b[33mMy Profiling Report\u001b[39m\u001b[33m\"\u001b[39m, explorative=\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m      5\u001b[39m profile.to_file(\u001b[33m\"\u001b[39m\u001b[33moutput.html\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'ydata_profiling'"
-     ]
-    }
-   ],
-   "source": [
-    "# Assuming 'df' is your DataFrame\n",
-    "from ydata_profiling import ProfileReport\n",
-    "\n",
-    "profile = ProfileReport(df, title=\"My Profiling Report\", explorative=True)\n",
-    "profile.to_file(\"output.html\")\n"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".machinelearning",
+   "display_name": ".machinelearning (3.13.5)",
    "language": "python",
    "name": "python3"
   },
