--- a/Machine_Learning_Concept/Data_Analysis_using_Pandas/ILP_DATASETS_Univariate_analysis.ipynb
+++ b/Machine_Learning_Concept/Data_Analysis_using_Pandas/ILP_DATASETS_Univariate_analysis.ipynb
@@ -1094,7 +1094,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".machinelearning (3.13.5)",
+   "display_name": ".machinelearning",
    "language": "python",
    "name": "python3"
   },
