--- a/Machine_Learning_Concept/Practics/TASK_01.ipynb
+++ b/Machine_Learning_Concept/Practics/TASK_01.ipynb
@@ -1164,7 +1164,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".machinelearning (3.13.5)",
+   "display_name": ".machinelearning",
    "language": "python",
    "name": "python3"
   },
