--- a/Machine_Learning_Concept/Practics/TASK_02.ipynb
+++ b/Machine_Learning_Concept/Practics/TASK_02.ipynb
@@ -1148,7 +1148,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".machinelearning (3.13.5)",
+   "display_name": ".machinelearning",
    "language": "python",
    "name": "python3"
   },
