--- a/Ensemble_learning/Bais_variance/Lasso_regularization.ipynb
+++ b/Ensemble_learning/Bais_variance/Lasso_regularization.ipynb
@@ -10,11 +10,29 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import Lasso"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pd.read_csv('https://raw.githubusercontent.com/ageron/data/main/lifelines_data.csv')"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "myenv",
+   "display_name": ".machinelearning",
    "language": "python",
    "name": "python3"
   },
@@ -28,7 +46,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
